BUG: v4skin | kajona-overrides-pe.less -> fixed the z-position of the pe-autocomplete, got hidden behind the global toolbar

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides-pe.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides-pe.less
@@ -395,7 +395,7 @@ body *[data-kajona-editable] {
 }
 
 .peGlobalAutocompleteSuggest {
-    z-index: 1500;
+    z-index: 5000;
 
     background-color: @peButtonToolbarBackground !important;
     .ui-menu-item {
